--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-    "name": "Mentos Music",
-    "logo": "https://te.legra.ph/file/24add7d3f42fdf0a909c7.jpg",
+    "name": "Eva Music ",
+    "logo": "https://te.legra.ph/file/feed86cf98fe073dcc09e.jpg",
     "description": "Music allow you to stream music trought the telegram voice chat feature.",
     "keywords": [
         "music", 
         "voice chat", 
         "telegram"
     ],
-    "repository": "https://github.com/ToxicCybers/MentosMusic",
+    "repository": "https://github.com/sakshi444a/MentosMusic",
     "stack": "container",
     "env": {
         "SESSION_NAME": {
